@@ -47,5 +47,5 @@ IM_Entry(
     array(
         'db-class' => 'PDO',
     ),
-    2
+    false
 );
