@@ -15,93 +15,92 @@
 
 require_once(dirname(__FILE__) . '/../../INTER-Mediator.php');
 
-IM_Entry(array (
-  array (
-    'records' => 1,
-    'paging' => true,
-    'name' => 'person',
-    'key' => 'id',
-    'query' => 
-    array (
+IM_Entry(array(
+    array(
+        'records' => 1,
+        'paging' => true,
+        'name' => 'person',
+        'key' => 'id',
+        'query' =>
+            array(),
+        'sort' =>
+            array(
+                array(
+                    'field' => 'id',
+                    'direction' => 'asc',
+                ),
+            ),
+        'repeat-control' => 'insert copy-contact,history delete',
     ),
-    'sort' => 
-    array (
-      array (
-        'field' => 'id',
-        'direction' => 'asc',
-      ),
+    array(
+        'name' => 'contact',
+        'key' => 'id',
+        'relation' =>
+            array(
+                array(
+                    'foreign-key' => 'person_id',
+                    'join-field' => 'id',
+                    'operator' => '=',
+                ),
+            ),
+        'repeat-control' => 'insert delete copy',
+        'query' =>
+            array(
+                array(
+                    'field' => 'datetime',
+                    'value' => '2005-01-01 00:00:00',
+                    'operator' => '>',
+                ),
+            ),
+        'default-values' =>
+            array(
+                array(
+                    'field' => 'datetime',
+                    'value' => '2012-01-01 00:00:00',
+                ),
+            ),
     ),
-    'repeat-control' => 'insert copy-contact,history delete',
-  ),
-  array (
-    'name' => 'contact',
-    'key' => 'id',
-    'relation' => 
-    array (
-      array (
-        'foreign-key' => 'person_id',
-        'join-field' => 'id',
-        'operator' => '=',
-      ),
+    array(
+        'name' => 'contact_way',
+        'key' => 'id',
     ),
-    'repeat-control' => 'insert delete copy',
-    'query' => 
-    array (
-      array (
-        'field' => 'datetime',
-        'value' => '2005-01-01 00:00:00',
-        'operator' => '>',
-      ),
+    array(
+        'name' => 'cor_way_kindname',
+        'key' => 'id',
+        'relation' =>
+            array(
+                array(
+                    'foreign-key' => 'way_id',
+                    'join-field' => 'way',
+                    'operator' => '=',
+                ),
+            ),
     ),
-    'default-values' => 
-    array (
-      array (
-        'field' => 'datetime',
-        'value' => '2012-01-01 00:00:00',
-      ),
+    array(
+        'name' => 'history',
+        'key' => 'id',
+        'relation' =>
+            array(
+                array(
+                    'foreign-key' => 'person_id',
+                    'join-field' => 'id',
+                    'operator' => '=',
+                ),
+            ),
+        'repeat-control' => 'insert delete',
     ),
-  ),
-  array (
-    'name' => 'contact_way',
-    'key' => 'id',
-  ),
-  array (
-    'name' => 'cor_way_kindname',
-    'key' => 'id',
-    'relation' => 
-    array (
-      array (
-        'foreign-key' => 'way_id',
-        'join-field' => 'way',
-        'operator' => '=',
-      ),
-    ),
-  ),
-  array (
-    'name' => 'history',
-    'key' => 'id',
-    'relation' => 
-    array (
-      array (
-        'foreign-key' => 'person_id',
-        'join-field' => 'id',
-        'operator' => '=',
-      ),
-    ),
-    'repeat-control' => 'insert delete',
-  ),
 ),
-array (
-  'formatter' => 
-  array (
-  ),
-  'aliases' => 
-  array (
-    'kindid' => 'cor_way_kindname@kind_id@value',
-    'kindname' => 'cor_way_kindname@name_kind@innerHTML',
-  ),
-),
-array (
-  'db-class' => 'PDO',
-),
-2);
+    array(
+        'formatter' =>
+            array(),
+        'aliases' =>
+            array(
+                'kindid' => 'cor_way_kindname@kind_id@value',
+                'kindname' => 'cor_way_kindname@name_kind@innerHTML',
+            ),
+    ),
+    array(
+        'db-class' => 'PDO',
+    ),
+    false
+);
